# LVTLength

./: .gitignore  CMakeLists.txt  README.md  base256.cpp  base256.h  lvt.cpp  lvt.h  main.cpp
src/: base256.cpp  lvt.cpp  main.cpp
test/: base256Test.cpp  lvtTest.cpp
